# regrate

./: .envrc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml  ci.yml
assets/templates/mysql/: down.mysql  up.mysql
assets/templates/postgres/: down.psql  up.psql
assets/templates/shell/: down.sh  up.sh
src/: main.rs  types.rs  utils.rs
src/commit/: mod.rs
src/create/: mod.rs
src/init/: mod.rs
src/names/: mod.rs
src/resolve/: mod.rs
src/run/: mod.rs
src/valid/: mod.rs
tests/: cli.rs
