[package]
name = "regrate"
version = "0.3.0"
edition = "2021"
description = "Better migrations using hashes for names instead of serial numbers or dates"
repository = "https://github.com/clord/regrate"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "3.0.0-rc.7", features = ["derive"] }
clap_generate = { version = "3.0.0-rc.7" }
rust-embed="6.3.0"
