[package]
name = "regrate"
version = "0.4.0"
edition = "2021"
description = "Better migrations using hashes for names instead of serial numbers or dates"
repository = "https://github.com/clord/regrate"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
rust-embed = "8"
walkdir = "2"
eyre = "0.6"
color-eyre = "0.6"
sha2 = "0.10"
bs58 = "0.5"
fallible-iterator = "0.3"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
